--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
+    "jshint": "^2.9.5",
     "lambda-tester": "^3.1.0",
     "mocha": "^4.0.1"
   }
