--- a/template.yaml
+++ b/template.yaml
@@ -1,9 +1,55 @@
 AWSTemplateFormatVersion : '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 
-Description: An example RESTful service
+Description: 'Federal Business Opportunity API'
+# https://github.com/widdix/aws-velocity/blob/master/infrastructure/serverless.yml
 
 Resources:
+
+  ApiGateway:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: dev
+      DefinitionBody:
+        swagger: '2.0'
+        info:
+          version: '1.0.0'
+          title: Federal Business Opportunity API
+          description: This API is used to track and compile federal business opportunities scraped from the following website.  http://www.fbodaily.com/
+        paths:
+          /op/{id}:
+            parameters:
+              - in: path
+                name: id
+                type: string
+                required: true
+            get:
+              summary: Get an opportunity by id
+              produces:
+                - application/xml
+                - application/json
+              responses:
+                200:
+                  description: OK
+                  schema:
+                    $ref: "#/definitions/Opportunity"
+                400:
+                  description: Invalid id
+                404:
+                  description: Resource not found
+              x-amazon-apigateway-request-validator: basic
+              x-amazon-apigateway-integration:
+                httpMethod: POST
+                type: 'aws_proxy'
+                uri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${FunctionGetApex.Arn}/invocations'
+                passthroughBehavior: when_no_match
+        definitions:
+          Opportunity:
+            type: object
+            properties:
+              icf_biz_opp_id:
+                type: integer
+                format: int64
 
   FunctionGetApex:
     Type: AWS::Serverless::Function
@@ -11,8 +57,14 @@ Resources:
       Runtime: nodejs6.10
       Handler: functions/version.handler
       Events:
-        GetApex:
+        Http:
           Type: Api
           Properties:
-            Path: /
+            Path: /op/{n}
             Method: GET
+            RestApiId: !Ref ApiGateway
+
+Outputs:
+  ApiUrl:
+    Description: URL of your API endpoint
+    Value: !Sub 'https://${ApiGatewayApi}.execute-api.${AWS::Region}.amazonaws.com/dev'
