--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "source": "config.js"
   },
   "scripts": {
-    "foo": "cross-var echo $S3_BUCKET",
-    "api": "sam local start-api",
-    "clean": "node_modules/.bin/rimraf coverage/ packaged.yaml",
-    "debug": "sam local start-api -d 5858",
+    "api": "npm run test && sam local start-api",
+    "clean": "node_modules/.bin/rimraf coverage/ packaged.yaml shared-local-instance.db",
+    "db-start": "cross-var java -Djava.library.path=$DB_HOME/DynamoDBLocal_lib/ -jar $DB_HOME/DynamoDbLocal.jar -sharedDb",
+    "debug": "npm run test && sam local start-api -d 5858",
     "delete-stack": "aws cloudformation delete-stack --stack-name \"$STACK_NAME\" $PROFILE",
     "deploy": "sam deploy --template-file ./packaged.yaml --stack-name \"$STACK_NAME\" $PROFILE --capabilities CAPABILITY_IAM",
     "lint": "node_modules/.bin/jshint **/*.js",
@@ -31,5 +31,10 @@
     "test": "npm run lint && npm run validate && node_modules/.bin/_mocha",
     "test-coverage": "npm run lint && node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test/**/*",
     "validate": "sam validate template.yaml"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.141.0",
+    "he": "^1.1.1",
+    "node-uuid": "^1.4.8"
   }
 }
