--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "aws-sdk-mock": "^1.7.0",
     "chai": "^4.1.2",
     "cross-var": "^1.1.0",
     "istanbul": "^0.4.5",
     "jshint": "^2.9.5",
     "lambda-tester": "^3.1.0",
     "mocha": "^4.0.1",
+    "node-fixtures": "0.0.1",
     "opener": "^1.4.3",
     "rimraf": "^2.6.2"
   },
